[tool.poetry]
name = "demo-python-http3"
version = "0.1.0"
description = ""
authors = ["natthasath <natthasath.sak@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "demo_python_http3"}]

[tool.poetry.dependencies]
python = "^3.10"
aioquic = "^0.9.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
